# video2x

./: .gitignore  CMakeLists.txt  build.py
include/libvideo2x/: filter_libplacebo.h  libplacebo.h  processor_factory.h
src/: filter_libplacebo.cpp  libplacebo.cpp  processor_factory.cpp
tools/libimage2x/: CMakeLists.txt  build.bat  build.py  build.sh
tools/libimage2x/include/: fileutils.h  gpu_utils.h  imgconversions.h  imgfilter_realcugan.h  imgfilter_realesrgan.h  imgprocessor.h  libimage2x.h  libimage2x_export.h
tools/libimage2x/src/: fileutils.cpp  gpu_utils.cpp  image2x.cpp  imgconversions.cpp  imgfilter_realcugan.cpp  imgfilter_realesrgan.cpp  libimage2x.cpp
tools/video2x/include/: argparse.h  vulkan_utils.h
tools/video2x/src/: argparse.cpp  ffmpeg_utils.cpp  vulkan_utils.cpp
